--- a/src/app/chart-page/chart-page.component.html
+++ b/src/app/chart-page/chart-page.component.html
@@ -1,1 +1,2 @@
-<p>chart-page works!</p>
+<app-chart class="page-element chart"></app-chart>
+<app-list-of-values class="page-element list-of-values"></app-list-of-values>
