--- a/src/app/chart-page/chart-page.component.html
+++ b/src/app/chart-page/chart-page.component.html
@@ -1,4 +1,4 @@
 <main class="chart-page">
-  <app-chart class="page-element chart"></app-chart>
+  <app-chart [values]="values" class="page-element chart"></app-chart>
   <app-list-of-values [values]="values" class="page-element list-of-values" (onNewValueAdd)="addNewValue($event)" (onValueRemove)="removeValue($event)"></app-list-of-values>
 </main>
